syntax = "proto3";

package edge;

option go_package = "github.com/yourorg/edge-video-agent/api/proto;edge";

service EdgeAgent {
  rpc AddCamera(AddCameraRequest) returns (AddCameraResponse);
  rpc RemoveCamera(RemoveCameraRequest) returns (RemoveCameraResponse);
  rpc ListCameras(ListCamerasRequest) returns (ListCamerasResponse);
  rpc GetCamera(GetCameraRequest) returns (GetCameraResponse);
  
  rpc StartStream(StreamControlRequest) returns (StreamControlResponse);
  rpc StopStream(StreamControlRequest) returns (StreamControlResponse);
  rpc GetStreamStatus(GetStreamStatusRequest) returns (GetStreamStatusResponse);
  rpc UpdateBitrate(UpdateBitrateRequest) returns (UpdateBitrateResponse);
  
  rpc GetDiagnostics(GetDiagnosticsRequest) returns (GetDiagnosticsResponse);
  rpc GetHealth(GetHealthRequest) returns (GetHealthResponse);
}

message Camera {
  string id = 1;
  string name = 2;
  string rtsp_url = 3;
  string username = 4;
  string password = 5;
  string type = 6;
  string status = 7;
  map<string, string> metadata = 8;
  bool enabled = 9;
}

message AddCameraRequest {
  Camera camera = 1;
}

message AddCameraResponse {
  bool success = 1;
  string message = 2;
  string camera_id = 3;
}

message RemoveCameraRequest {
  string camera_id = 1;
}

message RemoveCameraResponse {
  bool success = 1;
  string message = 2;
}

message ListCamerasRequest {}

message ListCamerasResponse {
  repeated Camera cameras = 1;
}

message GetCameraRequest {
  string camera_id = 1;
}

message GetCameraResponse {
  Camera camera = 1;
}

message StreamControlRequest {
  string camera_id = 1;
}

message StreamControlResponse {
  bool success = 1;
  string message = 2;
}

message GetStreamStatusRequest {
  string camera_id = 1;
}

message StreamStatus {
  string camera_id = 1;
  string state = 2;
  int64 started_at = 3;
  string last_error = 4;
  int32 error_count = 5;
  int32 current_bitrate = 6;
  int32 target_bitrate = 7;
  int32 current_fps = 8;
  string resolution = 9;
  int64 bytes_sent = 10;
  int64 packets_lost = 11;
}

message GetStreamStatusResponse {
  StreamStatus status = 1;
}

message UpdateBitrateRequest {
  string camera_id = 1;
  int32 bitrate = 2;
}

message UpdateBitrateResponse {
  bool success = 1;
  string message = 2;
}

message GetDiagnosticsRequest {}

message GetDiagnosticsResponse {
  string agent_id = 1;
  string agent_name = 2;
  int32 total_cameras = 3;
  int32 active_streams = 4;
  string uptime = 5;
  bool onvif_enabled = 6;
  bool adaptive_enabled = 7;
  map<string, string> additional_info = 8;
}

message GetHealthRequest {}

message GetHealthResponse {
  bool healthy = 1;
  string status = 2;
  int64 timestamp = 3;
}